added planetary acquisition options to Campaign Options dialog

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -10,7 +10,8 @@ btnSave.text=Confirm and Save as Preset
 btnLoad.text=Load a Preset
 btnCancel.text=Cancel
 lblCamo.text=Camo:
-panRepair.TabConstraints.tabTitle=Repair and Acquisition
+panRepair.TabConstraints.tabTitle=Repair and Maintenance
+panSupplies.TabConstraints.tabTitle=Supplies and Acquisition
 panTech.TabConstraints.tabTitle=Tech Limits
 panPersonnel.TabConstraints.tabTitle=Personnel
 panPersonnelMarket.TabConstraints.tabTitle=Personnel Market
@@ -56,6 +57,8 @@ clanPriceModifierLabel.text=Clan tech price modifier
 clanPriceModifierJFormattedTextField.toolTipText=Non canon modifier which :\n* Multiplies buy/sell price of Clan units by the specified number\n* Multiplies buy/sell price of Clan components by the specified number\n
 usedPartsValueLabel.text=Value of used parts
 usedPartsValueJFormattedTextField.toolTipText=multiplier for value of used parts
+disallowPlanetaryAcquisitionClanCrossover.text=No Clan/Inner Sphere supply sharing
+disallowPlanetaryAcquisitionClanCrossover.toolTipText=If checked, Inner Sphere factions will not be able to find supplies on Clan-controlled worlds, and vice versa. 
 damagedPartsValueLabel.text=Value of damaged parts
 damagedPartsValueJFormattedTextField.toolTipText=multiplier for value of used parts
 useEasierRefitCheckBox.toolTipText=Enables a non canon faction modifier which :\n* Decreases decreases refit/customization difficulty by 1\n* Multiplies refit/customization time by 0.5
@@ -66,6 +69,10 @@ repairSystemComboBoxLabel.text=Repair System
 repairSystem.WarchestCustom.lightDamageModifier=0.05
 repairSystem.WarchestCustom.heavyDamageModifier=0.10
 repairSystem.WarchestCustom.cripplingDamageModifier=0.25
+usePlanetaryAcquisitions.text=Use Planet-based Acquisition System (overrides default delivery times)
+usePlanetaryAcquisitions.toolTipText=<html>Supplies will be searched for on specific planets up to a certain jump radius away, starting on current planet.<br> To find a given part, an availability roll must first succeed to identify a contact and then parts may be rolled for until a failure. <br> Planetary socio-industrial ratings can affect the target roll. <br> All delivery times are based on the number of recharges necessary (7 days), the in-system transit time at both points, and 1d6 extra days per jump.</html>
+usePlanetaryAcquisitionsVerbose.text=Use verbose reporting for planet-based acquisitions. 
+usePlanetaryAcquisitionsVerbose.toolTipText=If checked, you will see all the details of the planetary search. Usually TMI, but good for testing and understanding how it works. 
 chkUseFinances.text=Use Finances
 useFactionForNamesBox.text=Use chosen faction for assigned names
 useFactionForNamesBox.toolTipText=Automatically assigns random name generator based on overall faction selection
