added options for disallowing or penalizing clan pars from IS factions

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -139,6 +139,10 @@ allowCanonOnlyBox.text=Only allow canon units for purchase
 allowCanonOnlyBox.toolTipText=Just what it says
 allowCanonRefitOnlyBox.text=Only allow canon variants as refits
 allowCanonRefitOnlyBox.toolTipText=Just what it says
+disallowClanPartsFromIS.text=Disallow acquiring clan parts from non-Clan factions
+disallowClanPartsFromIS.toolTipText=<html>If checked, you will not be able to purchase clan parts from non-Clan factions.<br> The modifier below will be ignored.</html>
+spnPenaltyClanPartsFromIS.text=Penalty for acquiring clan parts from non-Clan factions
+spnPenaltyClanPartsFromIS.toolTipText=<html>The penalty for acquiring clan parts from non-Clan factions when not disallowed entirely. <br>This penalty is cumulative with the general penalty for clan parts.</html>
 variableTechLevelBox.text=Variable tech level
 variableTechLevelBox.toolTipText=If checked, the tech level for a part or unit will change depending on whether it is in prototype stage (experimental), production (advanced), or common (standard).
 factionIntroDateBox.text=Use faction intro dates
