Manei domini ranks/classes made into enumerations

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -20,7 +20,9 @@ bareHands.text=Bare Hands
 changeBiography.text=Change Biography...
 changeCallsign.text=Change Callsign...
 changeMDClass.text=Change Manei Domini Class
+changeMDClass.none=None
 changeMDRank.text=Change Manei Domini Rank
+changeMDRank.none=None
 changePortrait.text=Change Portrait...
 randomizePortrait.text=Randomize Portrait(s)
 changePrimaryDesignation.text=Change Primary Designation
