Fixes #865 and other small issues.

--- a/MekHQ/resources/mekhq/resources/LogEntries.properties
+++ b/MekHQ/resources/mekhq/resources/LogEntries.properties
@@ -47,5 +47,5 @@ divorcedFrom.text=Divorced from {0}
 marries.text=Married {0}
 gainedEdge.text=Gained edge point
 gained.text=Gained {0}
-removedAward.text=Removed award {0}
-awarded.text=Awarded {0}: {1}
+removedAward.text=Removed award {0} of the award set {1}
+awarded.text=Awarded {0} of the {1} award set: {2}
