Allows grouping personnel by their unit on the Personnel tab

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -156,6 +156,8 @@ scrollAcquisitionTable.TabConstraints.tabTasks=Acquisitions
 scrollPodTable.TabConstraints.tabTasks=Pod Space
 lblPersonChoice.text=Personnel Type:
 lblPersonView.text=View:
+chkGroupByUnit.text=Group by Unit
+chkGroupByUnit.toolTipText=Displays personnel grouped by their unit (i.e. the commanding officer is shown, and all other crew or soldiers are hidden).
 txtDesc.contentType=text/html
 #NOI18N
 txtDesc.font=Monospaced-Plain-12
