--- a/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
@@ -13,3 +13,5 @@ lblSocioIndustrial1.text=<html><b>Socio-Industrial Levels:</b></html>
 lblPosition.text=<html><b>Position in System:</b></html>
 lblPopulation.text=<html><b>Population:</b></html>
 lblGovernment.text=<html><b>Government:</b></html>
+primaryPlanet.text=(Primary Planet)
+system.text=System
