--- a/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
@@ -1,5 +1,8 @@
 lblStarType1.text=<html><b>Star Type (Recharge Time):</b></html>
+lblPlanetaryType1.text=<html><b>Planet Type:</b></html>
 lblJumpPoint1.text=<html><b>Time to Jump Point:</b></html>
+lblYear1.text=<html><b>Year length:</b></html>
+lblDay1.text=<html><b>Day length:</b></html>
 lblSatellite1.text=<html><b>Number of Satellites:</b></html>
 lblGravity1.text=<html><b>Surface Gravity:</b></html>
 lblPressure1.text=<html><b>Atmospheric Pressure:</b></html>
