--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -17,6 +17,7 @@ lblImplants1.text=<html><b>Implants:</b></html>;
 lblAdvancedMedical1.text=<html><b>Injury Penalties:</b></html>;
 lblInjuries.text=<html><b>Injuries:</b></html>;
 lblEdge1.text=<html><b>Edge:</b></html>;
+lblEdgeAvail1.text=<html><b>Edge Available:</b></html>;
 lblSpouse1.text=<html><b>Spouse:</b></html>;
 lblChildren1.text=<html><b>Children:</b></html>;
 pnlInjuries.title=Injury Report
