--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -3,6 +3,7 @@ lblBackground1.text=<html><b>Background:</b></html>;
 lblAge1.text=<html><b>Age:</b></html>;
 lblGender1.text=<html><b>Gender:</b></html>;
 lblStatus1.text=<html><b>Status:</b></html>;
+lblOrigin1.text=<html><b>Origin:</b></html>;
 lblRecruited1.text=<html><b>Recruited:</b></html>;
 lblTimeServed1.text=<html><b>Time in Service:</b></html>;
 lblDuedate1.text=<html><b>Due Date:</b></html>;
