Add edge trigger text string constants and resources

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -48,6 +48,12 @@ edgeTriggerHeadHits.text=Head Hits
 edgeTriggerKO.text=Fail KO check
 edgeTriggerMASCFailure.text=MASC Failures
 edgeTriggerTAC.text=Through Armor Crits
+edgeTriggerAeroAltLoss.text=Atmospheric Altitude Loss
+edgeTriggerAeroExplosion.text=Ammo/Fuel Explosion
+edgeTriggerAeroKO.text=AF/CF/SC Pilot KO check
+edgeTriggerAeroLuckyCrit.text=Ignore Lucky Crit
+edgeTriggerAeroNukeCrit.text=Nuclear Missile Crit
+edgeTriggerAeroTrnBayCrit.text=Transported Unit Crit
 edgeTriggerHealCheck.text=Critically Fail Healing check
 edgeTriggerBreakPart.text=Fail Repair Check that Would Break a Part
 edgeTriggerFailedRefit.text=Fail Refit Roll
