--- a/MekHQ/.editorconfig
+++ b/MekHQ/.editorconfig
@@ -1,9 +1,16 @@
 # EditorConfig: https://EditorConfig.org
 
 [*]
-end_of_line = crlf
+charset = utf-8
 
 [*.java]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+insert_final_newline = true
+continuation_indent_size = 8
+
+[*.xml]
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
