--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'org.jfree:jfreechart:1.5.0'
     implementation 'joda-time:joda-time:2.10'
+    implementation 'org.joda:joda-money:1.0.1'
     implementation 'org.apache.commons:commons-text:1.4'
     implementation 'org.apache.commons:commons-csv:1.4'
     implementation 'javax.vecmath:vecmath:1.5.2'
