--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
     testImplementation 'junit:junit:4.12' 
     testImplementation 'org.mockito:mockito-core:2.20.1'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.0'
 }
 
 mainClassName = 'mekhq.MekHQ'
