bring back the GUI

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -59,6 +59,7 @@ panOrganization.TabConstraints.tabTitle=TO&E
 panMap.TabConstraints.tabTitle=Interstellar Map
 panBriefing.TabConstraints.tabTitle=Briefing Room
 panMekLab.TabConstraints.tabTitle=Mek Lab
+panStratcon.TabConstraints.tabTitle=AtB Campaign State
 jLabel2.text=Nothing Implemented Yet!
 btnAssignDoc.text=Assign
 btnUnassignDoc.text=Unassign
