Addressing PR feedback
Addressing last PR feedback.
Fixing a few exceptions and UI issues.
Simplifying using money on the UI by using JMoneyTextField.

--- a/MekHQ/resources/mekhq/resources/NewLoanDialog.properties
+++ b/MekHQ/resources/mekhq/resources/NewLoanDialog.properties
@@ -17,7 +17,7 @@ btnMinus100k.text=-100K
 btnPlus10k.text=+10K
 btnMinus10k.text=-10K
 detailsTitle.text=Loan Details
-lblAPR.text="APR:
+lblAPR.text=APR:
 lblCollateralPct.text=Collateral %:
 lblLength.text=Length:
 lblSchedule.text=Schedule:
