--- a/MekHQ/resources/mekhq/resources/AddFundsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/AddFundsDialog.properties
@@ -1,6 +1,6 @@
 label.text=Funds to add :
 btnAddFunds.actionCommand=AddFunds
 btnAddFunds.text=Add Funds
-jFormattedTextFieldFundsQuantity.toolTipText=Quantity of funds to add to treasury. Negative amounts remove money.
-jFormattedTextFieldFundsQuantity.text=0
+fundsQuantityField.toolTipText=Quantity of funds to add to treasury. Negative amounts remove money.
+fundsQuantityField.text=0
 Form.title=Add Funds
