WIP for new Mission entry information on personnel

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -2,6 +2,7 @@ kiaQ.text=KIA?
 abilityDesc.format=%s %s
 addPregnancy.text=Add Pregnancy
 addSingleLogEntry.text=Add Single Log Entry...
+addMissionEntry.text=Add Mission Entry...
 addXP.text=Add XP...
 add1XP.text=Add 1 XP
 assignAsNavigator.text=As Navigator
@@ -64,6 +65,7 @@ editCallsign.text=Edit Callsign
 editHits.text=Edit Hits...
 editInjuries.text=Edit Injuries...
 editKillLog.text=Edit Kill Log...
+editMissionLog.text=Edit Mission Log...
 editPersonnelLog.text=Edit Personnel Log...
 enterNewCallsign.text=Enter new callsign
 exportPersonnel.text=Export Personnel
