--- a/MekHQ/resources/mekhq/resources/EditMissionsLogDialog.properties
+++ b/MekHQ/resources/mekhq/resources/EditMissionsLogDialog.properties
@@ -1,5 +1,3 @@
+dialog.name=EditMissionsLogDialog
 dialog.title=Edit Missions Log for
-btnAdd.text=Add Mission
-btnEdit.text=Edit Mission
-btnDelete.text=Delete Mission
 btnOK.text=Done
