--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -21,7 +21,7 @@ lblEdge1.text=<html><b>Edge:</b></html>;
 lblEdgeAvail1.text=<html><b>Edge Available:</b></html>;
 lblSpouse1.text=<html><b>Spouse:</b></html>;
 lblChildren1.text=<html><b>Children:</b></html>;
-missionsLog.title=Missions Log
+missionLog.title=Mission Log
 pnlInjuries.title=Injury Report
 pnlDescription.title=Description
 pnlLog.title=Personnel Log
