Managing theme with new preferences system
- Added adapters for JCheckBox, JTable and JSpinner (with NumberModel).
- Added ObservableString and StringPreference for string values (like the selected theme).
- Updated MekHQ and CampaignGUI so theme switching code is centralized in MekHQ (as we need the theme for the initial startup dialogs before we get to the campaign UI).
- Added saving/loading themes from JSON using jackson.core in streaming mode.

--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     implementation 'log4j:log4j:1.2.17'
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.8'
     runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.0'
     runtimeOnly 'org.glassfish.jaxb:jaxb-core:2.3.0'
     runtimeOnly 'com.sun.activation:javax.activation:1.2.0'
