--- a/MekHQ/resources/mekhq/resources/LogEntries.properties
+++ b/MekHQ/resources/mekhq/resources/LogEntries.properties
@@ -1,7 +1,7 @@
 asA.text= as a {0}
 madeBondsmanBy.text=Made bondsman by {0}
 madePrisonerBy.text=Made prisoner by {0}
-joined.text=Joined {0}
+joined.text=Joined {0}\u0020
 freed.text=Freed
 madeBondsman.text=Made Bondsman
 madePrisoner.text=Made Prisoner
