--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -1,2 +1,8 @@
 dialog.text=MekHQ Settings
-dialog.name=DialogMekHQOptions
+okButton.text=Ok
+cancelButton.text=Cancel
+labelSavedInfo.text=Auto save options
+optionSaveDaily.text=Save daily (before day starts)
+optionSaveWeekly.text=Save weekly (before week starts)
+checkSaveBeforeMissions.text=Save before attempting a mission?
+labelSavedGamesCount.text=Maximum number of auto-saved games
