--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -2,6 +2,7 @@ dialog.text=MekHQ Settings
 okButton.text=Ok
 cancelButton.text=Cancel
 labelSavedInfo.text=Auto save options
+optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
 optionSaveWeekly.text=Save weekly (before week starts)
 checkSaveBeforeMissions.text=Save before attempting a mission?
