Adding auto-save before missions
Adding autosave before starting a mission
Fixing a few minor issues

--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -1,4 +1,4 @@
-dialog.text=MekHQ Settings
+dialog.text=MekHQ Options
 okButton.text=Ok
 cancelButton.text=Cancel
 labelSavedInfo.text=Auto save options
