Fixes accessibility issues
Fixes accessibility issues in CustomizePersonDialog related to the skill list.
Fixes #1188.

--- a/MekHQ/resources/mekhq/resources/CustomizePersonDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CustomizePersonDialog.properties
@@ -28,3 +28,9 @@ age= years old
 optionGroup.lvl3Advantages=Advantages
 optionGroup.edgeAdvantages=Edge
 optionGroup.MDAdvantages=Warrior Augmentations
+checkSkill.name=checkBoxFor
+lblValue.name=skillValueFor
+lblLevel.name=skillLevelFor
+lblBonus.name=skillBonusFor
+spnLevel.name=spinnerLevelFor
+spnBonus.name=spinnerBonusFor
