reworked track scenario generation mechanism

--- a/MekHQ/resources/mekhq/resources/AtBStratCon.properties
+++ b/MekHQ/resources/mekhq/resources/AtBStratCon.properties
@@ -1,2 +1,7 @@
+supportPoint.text=Support point
+supportPointConvert.text=Converted from victory point
+fromChainedScenario.text=From chained scenario %s
+lanceInFightRole.text=Lance in Fight role
+
 lblDefensiveMinefieldCount.text=Defensive Minefield Count: %d
 lblSelectIndividualUnits.text=Select individual units (%d max)
