--- a/MekHQ/resources/mekhq/resources/CampaignExportWizard.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignExportWizard.properties
@@ -10,5 +10,8 @@ lblInstructions.ForceSelection.text = Select Forces for Export
 lblInstructions.PersonSelection.text = Select Personnel for Export
 lblInstructions.UnitSelection.text = Select Units for Export
 lblInstructions.PartSelection.text = Select Parts for Export
+lblInstructions.PartCountSelection.text = Confirm Part Counts for Export
 lblInstructions.MiscSelection.text = Miscellaneous Export Settings
 lblInstructions.Finalize.text = Choose Export Destination
+lblStatus.Error.text = Part count should be an integer
+btnUpdatePartCount.text = Update
