export money; export completed missions

--- a/MekHQ/resources/mekhq/resources/CampaignExportWizard.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignExportWizard.properties
@@ -1,5 +1,6 @@
 chkExportSettings.text = Export Campaign Settings
 chkExportContractOffers.text = Export Current Contract Offers
+chkExportCompletedContracts.text = Export Completed Contracts
 chkExportAssignedTechs.text = Export Assigned Techs
 chkDestructiveExport.text = Destructive Export
 chkDestructiveExport.tooltip = Personnel, units and parts selected will be removed from current campaign.
@@ -14,4 +15,5 @@ lblInstructions.PartCountSelection.text = Confirm Part Counts for Export
 lblInstructions.MiscSelection.text = Miscellaneous Export Settings
 lblInstructions.Finalize.text = Choose Export Destination
 lblStatus.Error.text = Part count should be an integer
+lblMoney.text = Export C-Bills
 btnUpdatePartCount.text = Update
