remove bug-prone settings export; add tooltip

--- a/MekHQ/resources/mekhq/resources/CampaignExportWizard.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignExportWizard.properties
@@ -1,4 +1,5 @@
-chkExportSettings.text = Export Campaign Settings
+chkExportSettings.text = Export Campaign State
+chkExportSettings.tooltip = (location, date, camo, faction)
 chkExportContractOffers.text = Export Current Contract Offers
 chkExportCompletedContracts.text = Export Completed Contracts
 chkExportAssignedTechs.text = Export Assigned Techs
